--- a/integration.yml
+++ b/integration.yml
@@ -4,7 +4,7 @@ pool:
 stages:
   - stage: ci
     displayName: Continuous Integration
-    Jobs:
+    jobs:
       - job: build
         displayName: Build Project Assets
         container: mcr/moicrosoft.com/dotnet/sdk:7.0
