--- a/integration.yml
+++ b/integration.yml
@@ -30,3 +30,12 @@ stages:
             displayName: Package .Net tool
           - publish: pkg/Contoso.Spaces.Console.1.0.0.nupkg
             displayName: upload package artifact
+            artifact: nuget-package
+      - job: release
+        displayName: Release on Nuget
+        dependsOn: build
+        container: mcr.microsoft.com/dotnet/sdk:7.0
+        steps:
+        - download: current
+          displayName: Download package artifact
+          artifact: nuget-package
