--- a/integration.yml
+++ b/integration.yml
@@ -43,7 +43,7 @@ stages:
           dotnet nuget push \
           Contoso.Spaces.Console.1.0.0.nupkg \
           --skip-duplicate \
-          --api-key $(nuget-api-key)
+          --api-key $(nuget-api-key) \
           --source https://api.nuget.org/v3/index.json
         displayName: Push to Nuget.org
         workingDirectory: $(Pipeline.Workspace)/nuget-package
